Finalizando CSS +HTML + JS

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <link rel="stylesheet" href="index.css">
 
+    <script defer src="index.js"></script>
+
     <title>PetLife</title>
 </head>
 <body>
